# ModulatorInRust

./: .gitignore  Cargo.toml  gemini.md
.gemini/: GEMINI.md
.gemini/skills/dsp_algorithm_designer/: SKILL.md
.gemini/skills/rust_arch_designer/: SKILL.md
.gemini/skills/rust_code_reviewer/: SKILL.md
.gemini/skills/rust_implementer/: SKILL.md
.gemini/skills/rust_refactor_expert/: SKILL.md
.gemini/skills/rust_tester/: SKILL.md
feature_markdowns/: bpsk_demodulator.md
skills/feature-planner/: SKILL.md
skills/feature-planner/references/: dsp-testing.md
src/: config.rs  convolve.rs  demodulator.rs  lib.rs  main.rs  modulator.rs  plotter.rs  pulse.rs  signal_dumper.rs
tests/: bpsk_loopback.rs
tools/: plot_modem.py
