[package]
name = "modulator_in_rust"
version = "0.1.0"
edition = "2021"

[features]
default = []
diagnostic-plots = ["dep:plotly", "dep:realfft", "dep:num-complex"]
[dependencies]
biquad = "0.4.2"
plotly = { version = "0.12.0", optional = true }
realfft = { version = "3.3.0", optional = true }
num-complex = { version = "0.4.6", optional = true }

[dev-dependencies]
rstest = "0.21"
